update, bug fix, add new endpoints