@@ -1,22 +1,33 @@
 package com.efedotov.meet_now.meet_now.service.chat;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.efedotov.meet_now.meet_now.dto.response.chat.MessageDto;
+import com.efedotov.meet_now.meet_now.dto.response.chat.MessageMediaDto;
+import com.efedotov.meet_now.meet_now.dto.response.chat.PermanentChatResponseDto;
+import com.efedotov.meet_now.meet_now.dto.response.content.StickerDto;
 import com.efedotov.meet_now.meet_now.dto.response.social.UserActivityDto;
 import com.efedotov.meet_now.meet_now.model.chat.Chat;
 import com.efedotov.meet_now.meet_now.model.chat.Message;
+import com.efedotov.meet_now.meet_now.model.chat.MessageMedia;
 import com.efedotov.meet_now.meet_now.model.chat.TemporaryChat;
+import com.efedotov.meet_now.meet_now.model.content.MessageContentType;
+import com.efedotov.meet_now.meet_now.model.content.Sticker;
 import com.efedotov.meet_now.meet_now.model.user.User;
 import com.efedotov.meet_now.meet_now.repository.chat.ChatRepository;
 import com.efedotov.meet_now.meet_now.repository.chat.MessageRepository;
 import com.efedotov.meet_now.meet_now.repository.chat.TemporaryChatRepository;
+import com.efedotov.meet_now.meet_now.repository.content.MessageContentTypeRepository;
+import com.efedotov.meet_now.meet_now.repository.content.StickerRepository;
 import com.efedotov.meet_now.meet_now.repository.user.UserRepository;
 
 import lombok.RequiredArgsConstructor;
@@ -33,17 +44,18 @@ public class WebSocketMessageService {
     private final UserRepository userRepository;
     private final SimpMessagingTemplate messagingTemplate;
     private final ChatService chatService;
-    // private final EncryptionUtils encryption;
+    private final MessageContentTypeRepository contentTypeRepository;
+    private final StickerRepository stickerRepository;
 
-
+    @Transactional
     public MessageDto processMessageDto(MessageDto messageDto) {
         UUID chatId = messageDto.getChatId();
         UUID tempChatId = messageDto.getTempChatId();
         UUID senderId = messageDto.getSenderId();
         UUID recipientId = messageDto.getRecipientId();
-        String text = messageDto.getText();
-
-        log.info("Пользователь отправил сообщение: от {} к {}, текст: {}", senderId, recipientId, text);
+        log.info("Пользователь отправил сообщение: от {} к {}, тип: {}, медиафайлов: {}",
+                senderId, recipientId, messageDto.getContentType(),
+                messageDto.getMedia() != null ? messageDto.getMedia().size() : 0);
 
         User sender = userRepository.findById(senderId)
                 .orElseThrow(() -> new RuntimeException("Sender not found"));
@@ -72,7 +84,7 @@ public class WebSocketMessageService {
 
             if (existingChat.isPresent()) {
                 chat = existingChat.get();
-                chat.setLastMessage(text);
+                chat.setLastMessage(generateLastMessagePreview(messageDto));
                 chatRepository.save(chat);
                 finalChatId = chat.getChatId();
             } else {
@@ -105,13 +117,101 @@ public class WebSocketMessageService {
             }
         }
 
+        Message message = createMessage(sender, recipient, messageDto, chat, tempChat);
+        message = messageRepository.save(message);
+
+        if (messageDto.getMedia() != null && !messageDto.getMedia().isEmpty()) {
+            saveMessageMedia(message, messageDto.getMedia());
+        }
+
+        MessageDto responseDto = createResponseDto(message, finalChatId, isTemporary);
+
+        messagingTemplate.convertAndSendToUser(
+                recipient.getUsername(),
+                "/queue/messages",
+                responseDto);
+
+        log.info("Отправлено сообщение пользователю {}: тип {}, текст {}, медиафайлов {}",
+                recipient.getUsername(), responseDto.getContentType(),
+                responseDto.getText() != null ? responseDto.getText() : "нет",
+                responseDto.getMedia() != null ? responseDto.getMedia().size() : 0);
+
+        return responseDto;
+    }
+
+    private void saveMessageMedia(Message message, List<MessageMediaDto> mediaDtos) {
+        for (int i = 0; i < mediaDtos.size(); i++) {
+            MessageMediaDto mediaDto = mediaDtos.get(i);
+            MessageMedia media = new MessageMedia();
+
+            if (mediaDto.getContentType() != null) {
+                MessageContentType contentType = contentTypeRepository.findByTypeName(mediaDto.getContentType())
+                        .orElseThrow(
+                                () -> new RuntimeException("Content type not found: " + mediaDto.getContentType()));
+                media.setContentType(contentType);
+            } else {
+
+                MessageContentType contentType = determineContentType(mediaDto);
+                media.setContentType(contentType);
+            }
+
+            media.setMediaUrl(mediaDto.getMediaUrl());
+            media.setFileSize(mediaDto.getFileSize());
+            media.setMimeType(mediaDto.getMimeType());
+            media.setThumbnailUrl(mediaDto.getThumbnailUrl());
+            media.setSortOrder(i);
+
+            if (mediaDto.getStickerId() != null) {
+                Sticker sticker = stickerRepository.findById(mediaDto.getStickerId())
+                        .orElseThrow(() -> new RuntimeException("Sticker not found"));
+                media.setSticker(sticker);
+            }
+
+            message.addMedia(media);
+        }
+
+        messageRepository.save(message);
+    }
+
+    private MessageContentType determineContentType(MessageMediaDto mediaDto) {
+        if (mediaDto.getStickerId() != null) {
+            return contentTypeRepository.findByTypeName("sticker")
+                    .orElseThrow(() -> new RuntimeException("Sticker content type not found"));
+        } else if (mediaDto.getMediaUrl() != null) {
+            String mimeType = mediaDto.getMimeType();
+            if (mimeType != null) {
+                if ("image".equals(mimeType) || mimeType.startsWith("image/")) {
+                    return contentTypeRepository.findByTypeName("image")
+                            .orElseThrow(() -> new RuntimeException("Image content type not found"));
+                } else if ("video".equals(mimeType) || mimeType.startsWith("video/")) {
+                    return contentTypeRepository.findByTypeName("video")
+                            .orElseThrow(() -> new RuntimeException("Video content type not found"));
+                } else {
+                    return contentTypeRepository.findByTypeName("file")
+                            .orElseThrow(() -> new RuntimeException("File content type not found"));
+                }
+            }
+        }
+
+        return contentTypeRepository.findByTypeName("file")
+                .orElseThrow(() -> new RuntimeException("Default file content type not found"));
+    }
+
+    private Message createMessage(User sender, User recipient, MessageDto messageDto,
+            Chat chat, TemporaryChat tempChat) {
         Message message = new Message();
         message.setSender(sender);
         message.setRecipient(recipient);
-        String encriptionText = text;
-        // String encriptionText = encryption.encryptAES(text);
-        message.setText(encriptionText);
+
+        String processedText = messageDto.getText();
+
+        message.setText(processedText);
+
         message.setCreatedAt(LocalDateTime.now());
+        message.setRead(false);
+
+        MessageContentType contentType = determineMessageContentType(messageDto);
+        message.setContentType(contentType);
 
         if (chat != null) {
             message.setChat(chat);
@@ -119,27 +219,124 @@ public class WebSocketMessageService {
             message.setTemporaryChat(tempChat);
         }
 
-        message = messageRepository.save(message);
-        MessageDto responseDto = new MessageDto();
-        responseDto.setId(message.getId());
-        responseDto.setText(message.getText());
-        responseDto.setCreatedAt(message.getCreatedAt());
-        responseDto.setSenderId(senderId);
-        responseDto.setRecipientId(recipientId);
+        return message;
+    }
 
-        if (isTemporary) {
-            responseDto.setTempChatId(finalChatId);
-        } else {
-            responseDto.setChatId(finalChatId);
+    private MessageContentType determineMessageContentType(MessageDto messageDto) {
+        log.info("🔍 DETERMINE_MESSAGE_CONTENT_TYPE: message contentType={}, media count={}",
+                messageDto.getContentType(),
+                messageDto.getMedia() != null ? messageDto.getMedia().size() : 0);
+
+        if (messageDto.getContentType() != null && !messageDto.getContentType().equals("text")) {
+            String contentType = messageDto.getContentType().toLowerCase();
+            log.info("🔍 Используем явный тип сообщения: {}", contentType);
+
+            switch (contentType) {
+                case "image" -> {
+                    return contentTypeRepository.findByTypeName("image")
+                            .orElseThrow(() -> new RuntimeException("Image content type not found"));
+                }
+                case "video" -> {
+                    return contentTypeRepository.findByTypeName("video")
+                            .orElseThrow(() -> new RuntimeException("Video content type not found"));
+                }
+                case "file" -> {
+                    return contentTypeRepository.findByTypeName("file")
+                            .orElseThrow(() -> new RuntimeException("File content type not found"));
+                }
+            }
         }
 
-        messagingTemplate.convertAndSendToUser(
-                recipient.getUsername(),
-                "/queue/messages",
-                responseDto);
-        log.info("Отправляем сообщение пользователю как оповещение {} от {} сообщение {}", recipient.getUsername(),
-                sender.getUsername(), responseDto.getText());
-        return responseDto;
+        if (messageDto.getMedia() != null && !messageDto.getMedia().isEmpty()) {
+            MessageMediaDto firstMedia = messageDto.getMedia().get(0);
+            MessageContentType mediaContentType = determineContentType(firstMedia);
+            log.info("🔍 Тип сообщения определен по первому медиа: {}",
+                    mediaContentType != null ? mediaContentType.getTypeName() : "null");
+            return mediaContentType;
+        }
+
+        log.info("🔍 Тип сообщения по умолчанию: text");
+        return contentTypeRepository.findByTypeName("text")
+                .orElseThrow(() -> new RuntimeException("Default text content type not found"));
+    }
+
+    private String generateLastMessagePreview(MessageDto messageDto) {
+        if (messageDto.getMedia() != null && !messageDto.getMedia().isEmpty()) {
+            if (messageDto.getMedia().stream().anyMatch(m -> m.getStickerId() != null)) {
+                return "Стикер";
+            } else if (messageDto.getMedia().stream().anyMatch(m -> "image".equals(m.getContentType()))) {
+                return messageDto.getMedia().size() > 1 ? "Фотографии (" + messageDto.getMedia().size() + ")" : "Фото";
+            } else if (messageDto.getMedia().stream().anyMatch(m -> "video".equals(m.getContentType()))) {
+                return messageDto.getMedia().size() > 1 ? "Видео (" + messageDto.getMedia().size() + ")" : "Видео";
+            } else if (messageDto.getMedia().stream().anyMatch(m -> "file".equals(m.getContentType()))) {
+                return messageDto.getMedia().size() > 1 ? "Файлы (" + messageDto.getMedia().size() + ")" : "Файл";
+            }
+        }
+        return messageDto.getText();
+    }
+
+    private MessageDto createResponseDto(Message message, UUID finalChatId, boolean isTemporary) {
+        MessageDto dto = new MessageDto();
+        dto.setId(message.getId());
+        dto.setText(message.getText());
+        dto.setCreatedAt(message.getCreatedAt());
+        dto.setSenderId(message.getSender().getId());
+        dto.setRecipientId(message.getRecipient().getId());
+        dto.setRead(message.isRead());
+
+        if (message.getContentType() != null) {
+            dto.setContentType(message.getContentType().getTypeName());
+        } else {
+            dto.setContentType("text");
+        }
+
+        if (message.getMedia() != null && !message.getMedia().isEmpty()) {
+            dto.setMedia(message.getMedia().stream()
+                    .map(this::convertMediaToDto)
+                    .collect(Collectors.toList()));
+        } else {
+            dto.setMedia(new ArrayList<>());
+        }
+
+        if (isTemporary) {
+            dto.setTempChatId(finalChatId);
+        } else {
+            dto.setChatId(finalChatId);
+        }
+
+        return dto;
+    }
+
+    private MessageMediaDto convertMediaToDto(MessageMedia media) {
+        MessageMediaDto dto = new MessageMediaDto();
+        dto.setId(media.getId());
+
+        if (media.getContentType() != null) {
+            dto.setContentType(media.getContentType().getTypeName());
+        } else {
+            dto.setContentType("file");
+        }
+
+        dto.setMediaUrl(media.getMediaUrl());
+        dto.setFileSize(media.getFileSize());
+        dto.setMimeType(media.getMimeType());
+        dto.setThumbnailUrl(media.getThumbnailUrl());
+        dto.setSortOrder(media.getSortOrder());
+
+        if (media.getSticker() != null) {
+            dto.setStickerId(media.getSticker().getId());
+            dto.setSticker(mapStickerToDto(media.getSticker()));
+        }
+
+        return dto;
+    }
+
+    private StickerDto mapStickerToDto(Sticker sticker) {
+        StickerDto dto = new StickerDto();
+        dto.setId(sticker.getId());
+        dto.setEmoji(sticker.getEmoji());
+        dto.setImageUrl(sticker.getImageUrl());
+        return dto;
     }
 
     public void sendActivityNotification(UserActivityDto activityDto) {
@@ -165,7 +362,7 @@ public class WebSocketMessageService {
 
         List<MessageDto> dtos = messages.stream()
                 .map(this::convertToDto)
-                .toList();
+                .collect(Collectors.toList());
 
         messagingTemplate.convertAndSendToUser(
                 username,
@@ -178,9 +375,31 @@ public class WebSocketMessageService {
         return chatService.getActiveTemporaryChatsForUser(userId);
     }
 
-    public List<Chat> getPermanentChats(UUID userId) {
+    public List<PermanentChatResponseDto> getPermanentChats(UUID userId) {
         log.info("Пользователь: {} запросил список активных постоянных чатов", userId);
-        return chatService.getPermanentChatsForUser(userId);
+        List<Chat> chats = chatService.getPermanentChatsForUser(userId);
+        return chats.stream()
+                .map(this::convertToPermanentChatDto)
+                .collect(Collectors.toList());
+    }
+
+    private PermanentChatResponseDto convertToPermanentChatDto(Chat chat) {
+        PermanentChatResponseDto dto = new PermanentChatResponseDto();
+        dto.setChatId(chat.getChatId());
+        dto.setUser1Id(chat.getUser1().getId());
+        dto.setUser1Username(chat.getUser1().getUsername());
+        dto.setUser1Firstname(chat.getUser1().getFirstname());
+        dto.setUser1Subname(chat.getUser1().getSubname());
+        dto.setUser1Avatar(chat.getUser1().getAvatar());
+        dto.setUser2Id(chat.getUser2().getId());
+        dto.setUser2Username(chat.getUser2().getUsername());
+        dto.setUser2Firstname(chat.getUser2().getFirstname());
+        dto.setUser2Subname(chat.getUser2().getSubname());
+        dto.setUser2Avatar(chat.getUser2().getAvatar());
+        dto.setCreatedAt(chat.getCreatedAt());
+        dto.setIsOpened(chat.getIsOpened());
+        dto.setLastMessage(chat.getLastMessage());
+        return dto;
     }
 
     private MessageDto convertToDto(Message message) {
@@ -190,6 +409,21 @@ public class WebSocketMessageService {
         dto.setCreatedAt(message.getCreatedAt());
         dto.setSenderId(message.getSender().getId());
         dto.setRecipientId(message.getRecipient().getId());
+        dto.setRead(message.isRead());
+
+        if (message.getContentType() != null) {
+            dto.setContentType(message.getContentType().getTypeName());
+        } else {
+            dto.setContentType("text");
+        }
+
+        if (message.getMedia() != null && !message.getMedia().isEmpty()) {
+            dto.setMedia(message.getMedia().stream()
+                    .map(this::convertMediaToDto)
+                    .collect(Collectors.toList()));
+        } else {
+            dto.setMedia(new ArrayList<>());
+        }
 
         if (message.getChat() != null) {
             dto.setChatId(message.getChat().getChatId());
@@ -200,5 +434,4 @@ public class WebSocketMessageService {
 
         return dto;
     }
-
 }
